# game_loot_new_bot

./: .gitignore  README.md  pyproject.toml  youtube_channel_ids.txt  youtube_channel_ids_unused.txt
classes/: Color.py  FakePyTube.py  MyMongoConnector.py  TwitterToTelegram.py  YoutubeAPIHandler.py  YoutubeChannelsModel.py  YoutubeChecker.py  YoutubeFactory.py  YoutubeToTwitter.py  plot.py
