[tool.poetry]
name = "game_loot_news_bot"
version = "0.1.0"
description = ""
authors = ["Crissky"]

[tool.poetry.dependencies]
python = "^3.9"
pymongo = "^3.12.0"
pytube = "^10.9.3"
twython = "^3.9.1"
moviepy = "^1.0.3"
youtube_dl = "^2021.6.6"
matplotlib = "^3.4.2"
numpy = "^1.21.1"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
